[package]
name = "ascii"
version = "0.1.0"
edition = "2024"

[dependencies]
jpeg-decoder = "0.3.1"
ffmpeg-next = { version = "7.1", features = [
    "format",
    "codec",
    "software-resampling",
    "software-scaling",
] }
cpal = "0.15.3"
ringbuf = "0.2.6"
term_size = "0.3.2"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
minimp4 = "0.1.2"
openh264 = "0.8.1"
rand = "0.9.1"
